Changed code folds look in nvim. Added fonts in Alacritty.

--- a/home_symlinks/.config/alacritty/alacritty.toml
+++ b/home_symlinks/.config/alacritty/alacritty.toml
@@ -7,4 +7,9 @@ style = "Regular"
 
 [font.italic]
 family = "SF Mono"
-style = "Italic"
+style = "Regular Italic"
+
+[font.bold_italic]
+family = "SF Mono"
+style = "Semibold Italic"
+
